<resources>
    <string name="app_name">Clean</string>
    <string name="load_user">Load User</string>
    <string name="avatar">avatar</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="discover_great_movies">Discover Great Movies</string>
    <string name="featured">Featured</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_actors">Popular Actors</string>
    <string name="now_coming">Now Coming</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="vote_average">vote_average</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="status">Status</string>
    <string name="language">Language</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="production_companies">Production Companies</string>
</resources>