<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.dashboard.MovieDetailActivity"
    android:background="@color/rich_black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/rich_black"
        android:elevation="@dimen/dp4"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_great_movies"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap"
                android:maxLines="1"
                android:maxEms="10"
                android:ellipsize="marquee"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/dp15"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgMoviePoster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp275"
        android:src="@drawable/image_placeholder"
        android:scaleType="fitXY"
        android:layout_below="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/imgMoviePoster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-20dp"
        android:backgroundTint="@color/rich_black"
        app:cardCornerRadius="@dimen/dp20">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="The Super Mario Bros. Movie"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp20"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/favorite" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvVote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="4981 Vote"
                    android:textColor="@color/manatee"
                    android:textSize="@dimen/sp14"
                    android:layout_marginTop="@dimen/dp10"
                    app:drawableStartCompat="@drawable/vote_drawable_left"
                    android:drawablePadding="@dimen/dp10"
                    android:gravity="center_vertical" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="@dimen/dp20">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"/>

                        <TextView
                            android:id="@+id/tvStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Released"
                            android:textColor="@color/manatee"
                            android:textSize="@dimen/sp14"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"/>

                        <TextView
                            android:id="@+id/tvLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="English"
                            android:textColor="@color/manatee"
                            android:textSize="@dimen/sp14"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"/>

                        <TextView
                            android:id="@+id/tvPopularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1995.723"
                            android:textColor="@color/manatee"
                            android:textSize="@dimen/sp14"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp20"/>

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="While working underground to fix a water main, Brooklyn plumbers—and brothers—Mario and Luigi are transported down a mysterious pipe and wander into a magical new world. But when the brothers are separated, Mario embarks on an epic quest to find Luigi."
                    android:textColor="@color/manatee"
                    android:textSize="@dimen/sp14"
                    android:layout_marginTop="@dimen/dp10"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerProduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>